docs(workflows): add auto-generated warnings to GitHub workflow files
- Add prominent warning comments to all workflow files
- Fix heredoc syntax issues in workflow templates
- Update documentation with warnings about auto-generated files
- Remove Cody references from AI tools comparison
- Improve README documentation links
- Update docs/README.md to reference valid files

--- a/.github/workflows/create-github-issue-on-failure.yml
+++ b/.github/workflows/create-github-issue-on-failure.yml
@@ -1,6 +1,8 @@
 # -----------------------------------------------------------------------------
 # GitHub Issue Creation Workflow
 # -----------------------------------------------------------------------------
+# ⚠️ WARNING: THIS FILE IS AUTO-GENERATED. DO NOT EDIT MANUALLY! ⚠️
+# Any changes may be overwritten by the generation process.
 # This workflow creates a GitHub issue when another workflow fails.
 # It captures details about the failure and creates a standardized issue
 # to help track and resolve CI/CD problems.
