--- a/src/templates/.github/workflows/create-github-issue-on-failure.yml
+++ b/src/templates/.github/workflows/create-github-issue-on-failure.yml
@@ -1,6 +1,8 @@
 # -----------------------------------------------------------------------------
 # GitHub Issue Creation Workflow
 # -----------------------------------------------------------------------------
+# ⚠️ WARNING: THIS FILE IS AUTO-GENERATED. DO NOT EDIT MANUALLY! ⚠️
+# Any changes may be overwritten by the generation process.
 # This workflow creates a GitHub issue when another workflow fails.
 # It captures details about the failure and creates a standardized issue
 # to help track and resolve CI/CD problems.
@@ -50,10 +52,8 @@ on:
         required: true
         description: 'Personal Access Token with repo scope'
 
-# Prevent concurrent runs of the same workflow on the same ref
-concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+# Concurrency is managed by the parent workflow that calls this one
+# This avoids deadlocks between parent and child workflows
 
 jobs:
   create_issue:
