--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -46,6 +46,7 @@ jobs:
       environment: ${{ needs.determine_environment.outputs.environment }}
       node_version: '20.x'
       package_manager: 'npm'
+      skip_jobs: 'claude_security_scan,code_quality_check'
     secrets:
       PAT: ${{ secrets.PAT }}
       ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
