chore: checks automation

--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -383,6 +383,7 @@ jobs:
             echo "IMPORTANT GUIDELINES:" >> code_review_prompt.txt
             echo "- IGNORE any files that would be excluded by .gitignore (e.g., node_modules/, dist/, build/, coverage/)" >> code_review_prompt.txt
             echo "- IGNORE package-lock.json files" >> code_review_prompt.txt
+            echo "- IGNORE version regressions" >> code_review_prompt.txt
             echo "- DO NOT review generated files, compiled code, or third-party dependencies" >> code_review_prompt.txt
             echo "- Focus on substantive code issues rather than trivial style issues" >> code_review_prompt.txt
             echo "- Be concise and specific in your feedback" >> code_review_prompt.txt
@@ -597,6 +598,7 @@ jobs:
             echo "12. Use of unsafe or deprecated functions" >> security_prompt.txt
             echo "" >> security_prompt.txt
             echo "IMPORTANT GUIDELINES:" >> security_prompt.txt
+            echo "- ONLY FAIL the scan for issues of severity 'high' or above " >> security_prompt.txt
             echo "- IGNORE any files that would be excluded by .gitignore (e.g., node_modules/, dist/, build/, coverage/)" >> security_prompt.txt
             echo "- DO NOT review generated files, compiled code, or third-party dependencies" >> security_prompt.txt
             echo "- Focus only on legitimate security issues in actual application code" >> security_prompt.txt
