--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@
 #       environment: ${{ github.ref_name }}
 #       jira_project_key: PROJ
 #     secrets:
-#       PAT: ${{ secrets.GITHUB_TOKEN }}
+#       PAT: ${{ secrets.PAT }}
 #       JIRA_API_TOKEN: ${{ secrets.JIRA_API_TOKEN }}
 # ```
 
